[Bug #20068] Encoding does not matter to empty strings